# advent-of-code

./: Cargo.toml  README.md  day_generator.sh  day_generator_fns.sh  template
.github/workflows/: readme-start.yml  update-2015-stars.yml  update-2021-stars.yml  update-2022-stars.yml  update-2023-stars.yml  update-2024-stars.yml
2015/: .tmuxinator.yml  Cargo.toml  new_day.sh  template
2015/inputs/day06/: sample.txt
2015/src/: lib.rs
2021/: Cargo.toml
2022/: .gitignore  .tmuxinator.yml  Cargo.toml  build_and_run_all.sh  new_day.sh  template
2022/src/: lib.rs
2023/: Cargo.toml  build_and_run_all.sh  new_day.sh  sane.txt
2023/inputs/day03/: edge_case_1.txt  edge_case_2.txt
2023/inputs/day10/: sample_6.txt
2023/inputs/day11/: sample.txt
2023/src/: lib.rs
2024/: Cargo.toml  new_day.sh
