[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glam = "0.24.2"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
rayon = "1.8.0"
regex = "1.10.2"
