[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
glam = "0.29"
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.13"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
rayon = "1"
regex = "1.11"
rstest = "0.23.0"
test-log = { version="0.2.16", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version="0.3.19", features = ["fmt", "env-filter"] }
